capture gaze data as iframe on page

--- a/crx/manifest.json
+++ b/crx/manifest.json
@@ -21,9 +21,8 @@
       ],
       "js": [
         "js/jquery-2.2.4.min.js",
-        "js/mousetrap.min.js",
         "js/toastr.min.js",
-        "js/screenfull.min.js",
+        "js/socket.io.js",
         "src/inject/index.js"
       ]
     }
