--- a/crx/manifest.json
+++ b/crx/manifest.json
@@ -10,21 +10,14 @@
     "128": "icons/128.png"
   },
   "default_locale": "en",
-  "content_scripts": [
-    {
-      "matches": [
-        "<all_urls>"
-      ],
-      "css": [
-        "css/toastr.min.css",
-        "css/index.css"
-      ],
-      "js": [
-        "js/jquery-2.2.4.min.js",
-        "js/toastr.min.js",
-        "js/socket.io.js",
-        "src/inject/index.js"
-      ]
-    }
-  ]
+  "permissions": [
+    "activeTab"
+  ],
+  "background": {
+    "scripts": ["src/bg/background.js"],
+    "persistent": false
+  },
+  "browser_action": {
+    "default_title": "GazeCode"
+  }
 }
