--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "serve": "PORT=80 NODE_ENV=production pm2 start ./bin/www"
+    "serve": "NODE_ENV=production pm2 start ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
