--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "lodash": "^4.17.20",
     "morgan": "~1.9.1",
+    "serve-index": "^1.9.1",
     "socket.io": "^2.3.0"
   }
 }
