--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "diskusage": "^1.1.3",
     "express": "~4.16.1",
+    "fs-extra": "^9.1.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "lodash": "^4.17.20",
