--- a/crx/manifest.json
+++ b/crx/manifest.json
@@ -11,7 +11,8 @@
   },
   "default_locale": "en",
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "*://*/*"
   ],
   "background": {
     "scripts": ["src/bg/background.js"],
